--- a/.github/workflows/continuos_training.yaml
+++ b/.github/workflows/continuos_training.yaml
@@ -1,5 +1,8 @@
 name: Continuos Training
 on: 
+  push:
+    branches:
+      - continuos_training
   schedule:
     - cron: '0 */6 * * *'
   workflow_dispatch:
