--- a/.github/workflows/continuos_training.yaml
+++ b/.github/workflows/continuos_training.yaml
@@ -2,7 +2,7 @@ name: Continuos Training
 on: 
   push:
     branches:
-      - continuos_training
+      - workflow-continuos-training
   schedule:
     - cron: '0 */6 * * *'
   workflow_dispatch:
