--- a/.github/workflows/continuos_training.yaml
+++ b/.github/workflows/continuos_training.yaml
@@ -26,6 +26,7 @@ jobs:
           source venv/bin/activate
           pip install -r requirements.txt
           export GOOGLE_APPLICATION_CREDENTIALS=$(python utilities/setter.py)
+          dvc add model/model.pkl -f
           dvc pull model/model.pkl.dvc -r model-track
           dvc unprotect model/model.pkl
           dvc repro -f
