--- a/.github/workflows/continuos_training.yaml
+++ b/.github/workflows/continuos_training.yaml
@@ -30,13 +30,13 @@ jobs:
           dvc unprotect model/model.pkl
           dvc repro -f
           echo "Training Completed ..."
-          dvc add model/model.pkl model-track --to-remote
-          dvc push model/model.pkl -r model-track
+          dvc add model/model.pkl.dvc -r model-track --to-remote
+          dvc push model/model.pkl.dvc -r model-track
       - name: Commit .dvc file changes
         run: |
           git config --local user.email "harrihoyos2680@gmail.com"
           git config --local user.username "bot"
-          git add .
+          git add model/model.pkl.dvc
           git commit -m "updating model"
       - uses: ad-m/github-push-action@master
         with:
