--- a/.github/workflows/continuos_training.yaml
+++ b/.github/workflows/continuos_training.yaml
@@ -30,7 +30,7 @@ jobs:
           dvc unprotect model/model.pkl
           dvc repro -f
           echo "Training Completed ..."
-          dvc add model/model.pkl.dvc -r model-track --to-remote
+          dvc add model/model.pkl -r model-track --to-remote
           dvc push model/model.pkl.dvc -r model-track
       - name: Commit .dvc file changes
         run: |
