--- a/.github/workflows/continuos_training.yaml
+++ b/.github/workflows/continuos_training.yaml
@@ -34,8 +34,8 @@ jobs:
           dvc push model/model.pkl.dvc -r model-track
       - name: Commit .dvc file changes
         run: |
-          git config --global user.email "harrihoyos2680@gmail.com"
-          git config --global user.username "Wiz80"
+          git config user.email "harrihoyos2680@gmail.com"
+          git config user.username "Wiz80"
           git add model/model.pkl.dvc
           git commit -m "updating model"
       - uses: ad-m/github-push-action@master
